delete welcome hero

--- a/index.html
+++ b/index.html
@@ -99,24 +99,34 @@
 		</header><!-- /.top-area-->
 		<!-- top-area End -->
 
-		<!--welcome-hero start -->
-		<section id="welcome-hero" class="welcome-hero">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 text-center">
-						<div class="header-text">
-							<h2>hi <span>,</span> i am <br> Debbie Chen <span>.</span>   </h2>
-							<br>
-							<h3>Sympathetic Listener, Enthusiastic Engineer, <br>LifeLong Learner for the whole universe </h3>
-							<p>Front-End Developer | Human Computer Interaction(Game | UI/UX Design) | Data Analyst</p>
-							<!-- <a href="download/resume.pdf" download>download resume</a> -->
-						</div><!--/.header-text-->
-					</div><!--/.col-->
-				</div><!-- /.row-->
-			</div><!-- /.container-->
+				<!--about start -->
+		<section id="about" class="about">
+			<!-- <div class="section-heading text-center">
+				<h3>Summary</h3>
+			</div> -->
 
-		</section><!--/.welcome-hero-->
-		<!--welcome-hero end -->
+			<div class="container">
+				<div class="about-content">
+					<div class="row">
+						<div class="col-sm-6 ">
+							<div class="header-text2">
+								<h2>hi <span>,</span> i am <br> Debbie Chen <span>.</span>   </h2>
+								<br>
+								<h3>Sympathetic Listener, Enthusiastic Engineer, LifeLong Learner </h3>
+								<p>Human Computer Interaction(Game | UX Design) <br> Front-End Developer | Data Analyst </p>
+								
+							</div>
+						</div>
+						<div class=" col-sm-5">
+							<div>
+								<img src="img/undraw_different_love.png" alt="profile_image" style="margin-top: -20px;">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section><!--/.about-->
+		<!--about end -->
 
 
 		<!--portfolio start -->
@@ -956,7 +966,7 @@
 		</section><!--/.portfolio-->
 		<!--portfolio end -->
 
-		<section id="publication" class="publication">
+		<!-- <section id="publication" class="publication">
 			<div class="section-heading text-center">
 				<h2>Publications</h2>
 			</div>
@@ -983,7 +993,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 				<!--skills start -->
 		<!-- <section id="skills" class="skills">
@@ -1163,7 +1173,7 @@
 					<p>
 						&copy; copyright Debbie Chen. design and developed by <a href="https://www.themesine.com/">themesine</a>
 						<br>
-						latest version: 2021/03/13 00:00 GMT-5:00
+						latest version: 2021/03/16 19:00 GMT-5:00
 					</p><!--/p-->
 					
 				</div><!--/.text-center-->
