--- a/portfolio/u07_smarthome/u07_smarthome.html
+++ b/portfolio/u07_smarthome/u07_smarthome.html
@@ -78,8 +78,8 @@
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
 			                	<li class="smooth-menu"><a href="../../index.html">home</a></li>
-			                    <li class="smooth-menu"><a href="index.html#portfolio">Portfolio</a></li>
-			                    <li class="smooth-menu"><a href="about_me.html">About me</a></li>
+			                    <li class="smooth-menu"><a href="../../index.html#portfolio">Portfolio</a></li>
+			                    <li class="smooth-menu"><a href="../../about_me.html">About me</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
