update e CF Adventure part

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 									<div class="item">
 										<img src="img/portfolio/g6_cfadventure.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="https://docs.google.com/presentation/d/1wZpxFxKPIqJrJeMNiR5-Wo5w8aF8dAFkcNNwQtbreAU/edit?usp=sharing" target="_blank">
+											<a href="portfolio/g06_cfadventure/g06_cfadventure.html">
 												<h4>Carbon Footprint Adventure</h4>
 												
 												<h5> This project is an environmental education VR game. We hope to use VR to let students know how severe climate change could influence animals, like polar bears. </h5>
